# github-mcp

./: .gitignore  LICENSE  README.md
client/: .env.example  README.md  main.py  pyproject.toml
server/: README.md  main.py  pyproject.toml
