[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "asyncssh>=2.20.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "openai>=1.72.0",
    "paramiko>=3.5.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "sseclient-py>=1.8.0",
    "sshtunnel>=0.4.0",
]
