[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.44",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "mcp[cli]>=1.6.0",
    "openai>=1.72.0",
    "requests>=2.32.3",
]
